Add a console app that creates element screenshots for the DocSamples

--- a/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/Shared/_Layout.cshtml
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <div class="govuk-width-container govuk-!-margin-top-5" id="container">
+    <div class="govuk-width-container govuk-!-margin-top-5 govuk-!-padding-5" id="container">
         @RenderBody()
     </div>
 
