--- a/src/GovUk.Frontend.AspNetCore/Views/Shared/_GovUkPageTemplate.cshtml
+++ b/src/GovUk.Frontend.AspNetCore/Views/Shared/_GovUkPageTemplate.cshtml
@@ -5,7 +5,7 @@
 @addTagHelper *, GovUk.Frontend.AspNetCore
 @{
     ViewData.Add("NoAppendHtmlSnippetsMarker", true);
-    var cspNonce = OptionsAccessor.Value.GetCspNonceForRequest(ViewContext.HttpContext);
+    var cspNonce = OptionsAccessor.Value.GetCspNonceForRequest?.Invoke(ViewContext.HttpContext);
 }
 <!DOCTYPE html>
 <html lang="en" class="govuk-template ">
