--- a/src/GovUk.Frontend.AspNetCore/Views/Shared/_GovUkPageTemplate.cshtml
+++ b/src/GovUk.Frontend.AspNetCore/Views/Shared/_GovUkPageTemplate.cshtml
@@ -1,51 +1,57 @@
 ﻿@using GovUk.Frontend.AspNetCore
+@using Microsoft.Extensions.Options
+@inject GovUk.Frontend.AspNetCore.PageTemplateHelper PageTemplateHelper
+@inject IOptions<GovUk.Frontend.AspNetCore.GovUkFrontendAspNetCoreOptions> OptionsAccessor
 @addTagHelper *, GovUk.Frontend.AspNetCore
 @{
     ViewData.Add("NoAppendHtmlSnippetsMarker", true);
+    var cspNonce = OptionsAccessor.Value.GetCspNonceForRequest?.Invoke(ViewContext.HttpContext);
 }
 <!DOCTYPE html>
 <html lang="en" class="govuk-template ">
 
 <head>
-  <meta charset="utf-8">
-  <title>@ViewBag.Title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <meta name="theme-color" content="#0b0c0c">
+    <meta charset="utf-8">
+    <title>@ViewBag.Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="theme-color" content="#0b0c0c">
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.ico" type="image/x-icon">
-  <link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-apple-touch-icon-180x180.png">
-  <link rel="apple-touch-icon" sizes="167x167" href="/assets/images/govuk-apple-touch-icon-167x167.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
+    <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-apple-touch-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="/assets/images/govuk-apple-touch-icon-167x167.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
 
-  @Html.Raw(HtmlSnippets.StyleImports)
+    @PageTemplateHelper.GenerateStyleImports()
 
-  <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
+    <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
 
-  @RenderSection("EndHead", required: false)
+    @RenderSection("EndHead", required: false)
 </head>
 
 <body class="govuk-template__body ">
-  @RenderSection("StartBody", required: false)
+    @PageTemplateHelper.GenerateJsEnabledScript(cspNonce)
 
-  <govuk-skip-link />
+    @RenderSection("StartBody", required: false)
 
-  @RenderSection("Header", required: false)
+    <govuk-skip-link />
 
-  <div class="govuk-width-container ">
-    <main class="govuk-main-wrapper " id="main-content" role="main">
-      @RenderBody()
-    </main>
-  </div>
+    @RenderSection("Header", required: false)
 
-  @RenderSection("Footer", required: false)
+    <div class="govuk-width-container ">
+        <main class="govuk-main-wrapper " id="main-content" role="main">
+            @RenderBody()
+        </main>
+    </div>
 
-  @Html.Raw(HtmlSnippets.ScriptImports)
+    @RenderSection("Footer", required: false)
 
-  @RenderSection("EndBody", required: false)
+    @PageTemplateHelper.GenerateScriptImports(cspNonce)
+
+    @RenderSection("EndBody", required: false)
 </body>
 
 </html>
