Tighten checks for the NoAppendHtmlSnippetsMarker

--- a/src/GovUk.Frontend.AspNetCore/Views/Shared/_GovUkPageTemplate.cshtml
+++ b/src/GovUk.Frontend.AspNetCore/Views/Shared/_GovUkPageTemplate.cshtml
@@ -4,7 +4,7 @@
 @inject IOptions<GovUk.Frontend.AspNetCore.GovUkFrontendAspNetCoreOptions> OptionsAccessor
 @addTagHelper *, GovUk.Frontend.AspNetCore
 @{
-    ViewData.Add("NoAppendHtmlSnippetsMarker", true);
+    ViewData.Add(NoAppendHtmlSnippetsMarker.ViewDataKey, NoAppendHtmlSnippetsMarker.Instance);
     var cspNonce = OptionsAccessor.Value.GetCspNonceForRequest?.Invoke(ViewContext.HttpContext);
 
     var htmlLang = ViewBag.HtmlLang ?? "en";
