--- a/samples/Samples.DateInput/Pages/Shared/_Layout.cshtml
+++ b/samples/Samples.DateInput/Pages/Shared/_Layout.cshtml
@@ -1,13 +1,5 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Samples.DateInput</title>
-</head>
-<body>
-    <div class="govuk-!-margin-5">
-        @RenderBody()
-    </div>
-</body>
-</html>
+﻿@{
+    Layout = "_GovUkPageTemplate";
+}
+
+@RenderBody()
