--- a/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/ErrorMessage/ErrorMessageWithModelStateError.cshtml
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/ErrorMessage/ErrorMessageWithModelStateError.cshtml
@@ -1,4 +1,4 @@
 ﻿@page
 @model ErrorMessageWithModelStateErrorModel
 
-<govuk-error-message asp-for="FullName" />
+<govuk-error-message for="FullName" />
