--- a/samples/Samples.DateInput/Pages/Index.cshtml
+++ b/samples/Samples.DateInput/Pages/Index.cshtml
@@ -5,7 +5,11 @@
 }
 
 <form asp-page="Index">
-    <govuk-date-input asp-for="DateOfBirth" />
+    <govuk-date-input asp-for="DateOfBirth">
+        <govuk-date-input-fieldset>
+            <govuk-date-input-fieldset-legend is-page-heading="true" class="govuk-fieldset__legend--l" />
+        </govuk-date-input-fieldset>
+    </govuk-date-input>
 
     <govuk-button type="submit">Save</govuk-button>
 </form>
