--- a/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/DateInput/DateInputWithFieldset.cshtml
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/DateInput/DateInputWithFieldset.cshtml
@@ -1,15 +1,15 @@
 ﻿@page
 
 <govuk-date-input id="passport-issued" name-prefix="passport-issued">
-    <govuk-date-input-fieldset>
-        <govuk-date-input-fieldset-legend is-page-heading="true" class="govuk-fieldset__legend--l">
+    <fieldset>
+        <legend is-page-heading="true" class="govuk-fieldset__legend--l">
             When was your passport issued?
-        </govuk-date-input-fieldset-legend>
-        <govuk-date-input-hint>
+        </legend>
+        <hint>
             For example, 27 3 2007
-        </govuk-date-input-hint>
-        <govuk-date-input-error-message>
+        </hint>
+        <error-message>
             The date your passport was issued must be in the past
-        </govuk-date-input-error-message>
-    </govuk-date-input-fieldset>
+        </error-message>
+    </fieldset>
 </govuk-date-input>
