--- a/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/ErrorSummary/ErrorSummaryWithModelStateError.cshtml
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/ErrorSummary/ErrorSummaryWithModelStateError.cshtml
@@ -2,5 +2,5 @@
 @model ErrorSummaryWithModelStateErrorModel
 
 <govuk-error-summary>
-    <govuk-error-summary-item asp-for="FullName" />
+    <govuk-error-summary-item for="FullName" />
 </govuk-error-summary>
