--- a/src/GovUk.Frontend.AspNetCore/ComponentGeneration/Templates/label.liquid
+++ b/src/GovUk.Frontend.AspNetCore/ComponentGeneration/Templates/label.liquid
@@ -3,7 +3,7 @@
 <label class="govuk-label {%- if params.classes %} {{ params.classes }}{% endif %}"
   {{- govukAttributes(params.attributes) -}}
   {%- if params.for %} for="{{ params.for }}"{% endif %}>
-  {% if params.html %}{{ params.html | raw | strip | indent: 2 }}{% else %}{{ params.text }}{% endif %}
+  {{ params.html | raw | strip | indent: 2 | default: params.text }}
 </label>
 {% endcapture -%}
 
