Fix showing error messages from nested views in generated summary

--- a/tests/GovUk.Frontend.AspNetCore.IntegrationTests/Pages/_ViewImports.cshtml
+++ b/tests/GovUk.Frontend.AspNetCore.IntegrationTests/Pages/_ViewImports.cshtml
@@ -1,1 +1,3 @@
 ﻿@addTagHelper *, GovUk.Frontend.AspNetCore
+@addTagHelper *, GovUk.Frontend.AspNetCore.IntegrationTests
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
