Update file-upload template for govuk-frontend v5.9.0

--- a/src/GovUk.Frontend.AspNetCore/ComponentGeneration/Templates/file-upload.liquid
+++ b/src/GovUk.Frontend.AspNetCore/ComponentGeneration/Templates/file-upload.liquid
@@ -4,7 +4,9 @@
 
 {% comment %} a record of other elements that we need to associate with the input using
 aria-describedby – for example hints or error messages {% endcomment %}
-{%- assign describedBy = params.describedBy | default: "" %}
+{%- assign describedBy = params.describedBy | default: "" -%}
+{%- assign id = params.id | default: params.name -%}
+
 <div class="govuk-form-group {%- if params.errorMessage %} govuk-form-group--error{% endif %} {%- if params.formGroup.classes %} {{ params.formGroup.classes }}{% endif %}"
   {{- govukAttributes(params.formGroup.attributes) }}>
   {{ govukLabel(dict(
@@ -13,6 +15,10 @@ aria-describedby – for example hints or error messages {% endcomment %}
     classes = params.label.classes,
     isPageHeading = params.label.isPageHeading,
     attributes = params.label.attributes,
+    for = id)) | strip | indent: 2
+  }}
+{%- if params.hint %}
+  {%- assign hintId = id | append: '-hint' %}
     for = params.id)) | strip | indent: 2 }}
 {%- if params.hint %}
   {%- assign hintId = params.id | append: '-hint' %}
@@ -25,7 +31,7 @@ aria-describedby – for example hints or error messages {% endcomment %}
     text = params.hint.text)) | strip | indent: 2 }}
 {%- endif %}
 {%- if params.errorMessage %}
-  {%- assign errorId = params.id | append: '-error' %}
+  {%- assign errorId = id | append: '-error' %}
   {%- assign describedBy = (describedBy | append: ' ' | lstrip) | append: errorId %}
   {{ govukErrorMessage(dict(
     id = errorId,
@@ -38,11 +44,45 @@ aria-describedby – for example hints or error messages {% endcomment %}
 {%- if params.formGroup.beforeInput %}
   {{ params.formGroup.beforeInput.html | raw | strip | indent: 2 | default: params.formGroup.beforeInput.text }}
 {% endif %}
-  <input class="govuk-file-upload {%- if params.classes %} {{ params.classes }}{% endif %} {%- if params.errorMessage %} govuk-file-upload--error{% endif %}" id="{{ params.id }}" name="{{ params.name }}" type="file"
+{%- if params.javascript %}
+  <div
+    class="govuk-drop-zone"
+    data-module="govuk-file-upload"
+    {{- govukI18nAttributes({
+      key: 'choose-files-button',
+      message: params.chooseFilesButtonText
+    }) -}}
+    {{- govukI18nAttributes({
+      key: 'no-file-chosen',
+      message: params.noFileChosenText
+    }) -}}
+    {{- govukI18nAttributes({
+      key: 'multiple-files-chosen',
+      messages: params.multipleFilesChosenText
+    }) -}}
+    {{- govukI18nAttributes({
+      key: 'drop-instruction',
+      message: params.dropInstructionText
+    }) -}}
+    {{- govukI18nAttributes({
+      key: 'entered-drop-zone',
+      message: params.enteredDropZoneText
+    }) -}}
+    {{- govukI18nAttributes({
+      key: 'left-drop-zone',
+      message: params.leftDropZoneText
+    }) -}}
+  >
+{% endif %}
+  <input class="govuk-file-upload {%- if params.classes %} {{ params.classes }}{% endif %} {%- if params.errorMessage %} govuk-file-upload--error{% endif %}" id="{{ id }}" name="{{ params.name }}" type="file"
   {%- if params.value %} value="{{ params.value }}"{% endif %}
   {%- if params.disabled %} disabled{% endif %}
+  {%- if params.multiple %} multiple{% endif %}
   {%- if describedBy != blank %} aria-describedby="{{ describedBy }}"{% endif %}
   {{- govukAttributes(params.attributes) }}>
+{%- if params.javascript %}
+  </div>
+{% endif %}
 {%- if params.formGroup.afterInput %}
   {{ params.formGroup.afterInput.html | raw | strip | indent: 2 | default: params.formGroup.afterInput.text }}
 {% endif %}
