--- a/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/FileUpload/FileUploadWithJavascriptEnhancements.cshtml
+++ b/src/GovUk.Frontend.AspNetCore.DocSamples/Pages/FileUpload/FileUploadWithJavascriptEnhancements.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
 
-<govuk-file-upload name="FileUpload1" javascript="true">
+<govuk-file-upload name="FileUpload1" javascript-enhancements="true">
     <govuk-file-upload-label>Upload a file</govuk-file-upload-label>
 </govuk-file-upload>
