--- a/src/GovUk.Frontend.AspNetCore/Components/Templates/accordion.liquid
+++ b/src/GovUk.Frontend.AspNetCore/Components/Templates/accordion.liquid
@@ -7,20 +7,20 @@
           {{ item.heading.html | raw | strip | indent: 8 | default: item.heading.text }}
         </span>
       </h{{ headingLevel }}>
-      {%- if item.summary.html or item.summary.text %}
+      {% if item.summary.html or item.summary.text %}
       <div class="govuk-accordion__section-summary govuk-body" id="{{ params.id }}-summary-{{ index }}">
         {{ item.summary.html | raw | strip | indent: 8 | default: item.summary.text }}
       </div>
-      {%- endif %}
+      {% endif %}
     </div>
     <div id="{{ params.id }}-content-{{ index }}" class="govuk-accordion__section-content">
-    {%- if item.content.html %}
+    {% if item.content.html %}
       {{ item.content.html | raw | strip | indent: 6 }}
     {% elsif item.content.text %}
       <p class="govuk-body">
         {{ item.content.text | trim | indent: 8 }}
       </p>
-    {% endif -%}
+    {% endif %}
     </div>
   </div>
 {%- endmacro -%}
