--- a/src/GovUk.Frontend.AspNetCore/Components/Templates/cookie-banner.liquid
+++ b/src/GovUk.Frontend.AspNetCore/Components/Templates/cookie-banner.liquid
@@ -3,34 +3,35 @@
 <div class="govuk-cookie-banner {%- if params.classes %} {{ params.classes }}{% endif %}" data-nosnippet role="region" aria-label="{{ params.ariaLabel | default: "Cookie banner" }}"
   {%- if params.hidden %} hidden{% endif %}
   {{- govukAttributes(params.attributes) }}>
-  {%- for message in params.messages %}
+  {% for message in params.messages %}
   <div class="govuk-cookie-banner__message {%- if message.classes %} {{ message.classes }}{% endif %} govuk-width-container" {%- if message.role %} role="{{ message.role }}"{% endif %}
     {{- govukAttributes(message.attributes) -}}
     {%- if message.hidden %} hidden{% endif %}>
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        {%- if message.headingHtml or message.headingText %}
+        {% if message.headingHtml or message.headingText %}
         <h2 class="govuk-cookie-banner__heading govuk-heading-m">
           {{ message.headingHtml | raw | strip | indent: 10 | default: message.headingText }}
         </h2>
-        {%- endif %}
+        {% endif %}
         <div class="govuk-cookie-banner__content">
-          {%- if message.html %}
+          {% if message.html %}
           {{ message.html | raw | strip | indent: 10 }}
           {% elsif message.text %}
           <p class="govuk-body">{{ message.text }}</p>
-          {%- endif %}
+          {% endif %}
         </div>
       </div>
     </div>
 
-    {% if message.actions -%}
+    {% if message.actions %}
+
     <div class="govuk-button-group">
-    {%- for action in message.actions %}
-      {%- capture buttonHtml -%}
-        {%- if action.href == blank or action.type == "button" %}
-          {{- govukButton(dict(
+    {% for action in message.actions %}
+      {% capture buttonHtml -%}
+        {% if action.href == blank or action.type == "button" %}
+          {{ govukButton(dict(
             text = action.text,
             type = (action.type | default: "button"),
             name = action.name,
@@ -39,18 +40,18 @@
             href = action.href,
             attributes = action.attributes
           )) }}
-        {%- else %}
+        {% else %}
           <a class="govuk-link {%- if action.classes %} {{ action.classes }}{% endif %}" href="{{ action.href }}"
             {{- govukAttributes(action.attributes) }}>
             {{- action.text -}}
           </a>
-        {%- endif %}
+        {% endif %}
       {%- endcapture %}
       {{ buttonHtml | raw | strip | indent: 6 }}
-    {%- endfor %}
+    {% endfor %}
     </div>
-    {%- endif %}
+    {% endif %}
 
   </div>
-  {%- endfor %}
+  {% endfor %}
 </div>
