Overhaul of attributes to finally fix encoding
There's still a few places to fix up, notably TagHelperAdapter.

--- a/src/GovUk.Frontend.AspNetCore/Components/Templates/accordion.liquid
+++ b/src/GovUk.Frontend.AspNetCore/Components/Templates/accordion.liquid
@@ -18,7 +18,7 @@
       {{ item.content.html | raw | strip | indent: 6 }}
     {% elsif item.content.text %}
       <p class="govuk-body">
-        {{ item.content.text | trim | indent: 8 }}
+        {{ item.content.text | strip | indent: 8 }}
       </p>
     {% endif %}
     </div>
